# developer

./: .cursorrules  .gitignore  CHANGELOG.md  CHAT_HISTORY.md  PROJECT_CONTEXT.md  README.md  SOLUTIONS_HISTORY.md  SYNC_INSTRUCTIONS.md  WSB_PORTFOLIO.md  c++  docker-compose.yml  gitlab-mcp.env  import requests.py  pyrightconfig.json  requirements.txt  sequential_thinking_docker_test.ps1  sequential_thinking_test.js  ПОЛНЫЙ_АНАЛИЗ_ПРОЕКТА.md
CRB/: CHAT_HISTORY.md  PROJECT_CONTEXT.md  SOLUTIONS_HISTORY.md  docker-compose.yml  requirements.txt
ChipDip/: .env  ARCHITECTURE.md  CHANGELOG.md  CHAT_HISTORY.md  Dockerfile  INSTALLATION.md  PROJECT_CONTEXT.md  README.md  SOLUTIONS_HISTORY.md  SYNC_INSTRUCTIONS.md  TECH_SPEC.md  docker-compose.yml  env.example  import_csv_to_db.py  init.sql  products_data.csv  remove_url_unique.sql  requirements.txt  run_webapp.py  supervisord.conf  temp_api_endpoint.py  test_selectors.py  tools_check_eligibility.py  tools_check_last_checked.py  update_db_schema.sql
Chip_and_Dip/: .dockerignore.gitignore  .gitignore  CHAT_HISTORY.md  PROJECT_CONTEXT.md  SOLUTIONS_HISTORY.md  app.py  docker-compose.yml  parser_logic.py  parser_logic_r.py  requirements.txt  test.py
Find_Chip/: .env  @HowManyCrystals_bot.py  CHANGELOG.md  CHAT_HISTORY.md  HMCB.lnk  PROJECT_CONTEXT.md  README.md  SOLUTIONS_HISTORY.md  SYNC_INSTRUCTIONS.md
NewBot/: .env  Heatmap.py  auth.py  booking.py  booking1.py  booking2.py  broadcast.py  database.py  database_config.py  help.py  imghdr.py  main.py  notifications.py  requirements.txt  (+1 more)
my_project/backend/: pyproject.toml
(+637 files in other folders)
