[tool.poetry] 
name = "my_project" 
version = "0.1.0" 
description = "A short description of your project" 
authors = ["Your Name <polin-ep@ya.ru>"] 
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
